# active-trace

./: .gitignore  CHANGES.md  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tenant.py  002_users_refresh_tokens.py  003_roles_permisos.py  004_create_carreras_cohortes_materias.py  005_create_audit_log.py  006_usuario_asignacion.py  007_version_padron.py  008_calificacion_umbral.py  009_comunicacion.py  010_encuentros_guardias.py  (+12 more)
backend/app/: main.py
backend/tests/: conftest.py  test_admin_catalog.py  test_analisis.py  test_app_startup.py  test_asignaciones_endpoints.py  test_asignaciones_models.py  test_asignaciones_vigencia.py  test_audit_api.py  test_audit_decorator_impersonation.py  test_audit_log_model.py  test_audit_repository.py  test_audit_schemas.py  test_audit_service.py  test_auditoria_panel.py  test_auth_models.py  test_auth_routes.py  test_auth_service.py  test_avisos_routers.py  test_calificaciones.py  test_coloquios_routers.py  test_comentario_tarea_repository.py  test_comunicaciones.py  test_config.py  test_database.py  test_encryption.py  test_encuentros_models.py  test_encuentros_repositories.py  test_encuentros_routers.py  test_encuentros_schemas.py  test_encuentros_services.py  test_entity_mixin.py  test_equipos_endpoints.py  test_estructura_endpoints.py  test_estructura_models.py  test_estructura_services.py  test_facturas.py  test_health.py  test_impersonation_context.py  test_impersonation_endpoints.py  test_impersonation_jwt.py  (+32 more)
(+534 files in other folders)
